fix line-breaks on small screens
This bug was leading to a line-break when nav items were too long. Since they had padding-left/right their width was not set correctly. Now nav items can have equal widths.

--- a/app/assets/stylesheets/redesign/layout/_nav-menu.scss
+++ b/app/assets/stylesheets/redesign/layout/_nav-menu.scss
@@ -161,7 +161,7 @@
   a {
     color: $c-neutral-8;
     border-bottom: 1px solid $c-neutral-8;
-    padding: 18px 40px;
+    padding: 18px 0;
     display: block;
     font-size: 1.4rem;
   }
